Old keys removed

--- a/ios/App/App/GoogleService-Info.plist
+++ b/ios/App/App/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.45713251575-3moefu5e7ihh8k818oo42u55bld2s63j</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAHeykbCmeEZaUmY_zgElG-6_q6RL42lOg</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>45713251575</string>
 	<key>PLIST_VERSION</key>
