--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @mobiscroll:registry=https://npm.mobiscroll.com
-//npm.mobiscroll.com/:_authToken=rILmLALGcL1nzesGKS6NhROexkUAoXbi53ky+cHnBm8=
+//npm.mobiscroll.com/:_authToken=
